--- a/Applying_k_nearest_neighbors_to_breast_cancer.ipynb
+++ b/Applying_k_nearest_neighbors_to_breast_cancer.ipynb
@@ -330,28 +330,28 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "40758a3b-a12b-415b-dd52-8ca7e19107d6"
+        "outputId": "f5886b26-2457-4476-ad5d-996581c6877a"
       },
       "source": [
         "from sklearn.neighbors import KNeighborsClassifier\n",
-        "classifier = KNeighborsClassifier(n_neighbors = 5, metric = 'minkowski', p = 2)\n",
+        "classifier = KNeighborsClassifier(metric = 'euclidean',n_neighbors=11, weights='uniform')\n",
         "classifier.fit(X_train, y_train)"
       ],
-      "execution_count": 31,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
-              "                     metric_params=None, n_jobs=None, n_neighbors=5, p=2,\n",
+              "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='euclidean',\n",
+              "                     metric_params=None, n_jobs=None, n_neighbors=11, p=2,\n",
               "                     weights='uniform')"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 31
+          "execution_count": 37
         }
       ]
     },
@@ -371,13 +371,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e6d1f2db-634e-4110-f14e-a8dc50f07de8"
+        "outputId": "523e4c17-91bd-4468-9e5e-f9e62abf0354"
       },
       "source": [
         "y_pred = classifier.predict(X_test)\n",
         "print(np.concatenate((y_pred.reshape(len(y_pred),1), y_test.reshape(len(y_test),1)),1))"
       ],
-      "execution_count": 32,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
@@ -523,7 +523,7 @@
             " [2 2]\n",
             " [2 2]\n",
             " [2 2]\n",
-            " [4 4]\n",
+            " [2 4]\n",
             " [2 2]\n",
             " [2 2]\n",
             " [2 2]\n",
@@ -574,7 +574,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "44df54f4-df29-479e-f89e-9f1edb0b22c5"
+        "outputId": "daae7970-e2c3-424d-ffdb-70a79cc102b3"
       },
       "source": [
         "from sklearn.metrics import confusion_matrix, accuracy_score\n",
@@ -582,13 +582,13 @@
         "print(cm)\n",
         "accuracy_score(y_test, y_pred)"
       ],
-      "execution_count": 20,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "[[103   4]\n",
-            " [  5  59]]\n"
+            " [  6  58]]\n"
           ],
           "name": "stdout"
         },
@@ -596,13 +596,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.9473684210526315"
+              "0.9415204678362573"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 20
+          "execution_count": 40
         }
       ]
     },
@@ -622,7 +622,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "i4Blk9TOwtg0",
-        "outputId": "bbfbc7ba-1320-460a-886e-48e2cf7897bc"
+        "outputId": "e856ddd2-ce7a-4e75-ad58-64de27c6cca1"
       },
       "source": [
         "from sklearn.model_selection import cross_val_score\n",
@@ -630,13 +630,13 @@
         "print(\"Accuracy: {:.2f} %\".format(accuracies.mean()*100))\n",
         "print(\"Standard Deviation: {:.2f} %\".format(accuracies.std()*100))"
       ],
-      "execution_count": 33,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Accuracy: 97.46 %\n",
-            "Standard Deviation: 2.14 %\n"
+            "Accuracy: 97.85 %\n",
+            "Standard Deviation: 2.21 %\n"
           ],
           "name": "stdout"
         }
@@ -658,7 +658,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZnzAfdvZxJ7Z",
-        "outputId": "4323435d-d881-4779-d5bf-df5b486c5ad6"
+        "outputId": "3cd52afb-5db3-4a65-b90b-e6ae8d80d22d"
       },
       "source": [
         "\n",
@@ -677,7 +677,7 @@
         "print(\"Best Accuracy: {:.2f} %\".format(best_accuracy*100))\n",
         "print(\"Best Parameters:\", best_parameters)"
       ],
-      "execution_count": 35,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
